force-app/main/default/objects/Whole_Person_Solution_Mapping__mdt/Whole_Person_Solution_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Whole Person Solution Mapping</label>
    <pluralLabel>Whole Person Solution Mappings</pluralLabel>
</CustomObject>