force-app/main/default/objects/Whole_Person_Solution_Mapping__mdt/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
                <default>true</default>
                <label>Diabetes</label>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
            <value>
                <fullName>Weight Management</fullName>
            </value>
            <value>
                <fullName>Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Chronic Kidney Disease</fullName>
            </value>
            <value>
                <fullName>Heart Failure</fullName>
            </value>
            <value>
                <fullName>Home Kidney Testing Program</fullName>
            </value>
            <value>
                <fullName>Home Kidney Testing Program - Results</fullName>
            </value>
            <value>
                <fullName>A1C Test Kits</fullName>
            </value>
            <value>
                <fullName>A1C Test Kits - Results</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>