force-app/main/default/objects/Whole_Person_Solution_Mapping__mdt/fields/Program_Platform_Version__c.field-meta.xml
<CustomField>
    <fullName>Program_Platform_Version__c</fullName>
    <label>Program Platform Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>myStrength Complete</fullName>
                <default>true</default>
                <label>myStrength Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>