force-app/main/default/objects/Whole_Person_Solution_Mapping__mdt/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WP Anchor</fullName>
                <default>true</default>
                <label>WP Anchor</label>
            </value>
            <value>
                <fullName>WP Non-Anchor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>