force-app/main/default/objects/Whole_Person_Solution_Mapping__mdt/fields/Provider_Based_Care__c.field-meta.xml
<CustomField>
    <fullName>Provider_Based_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Based Care</label>
    <type>Checkbox</type>
</CustomField>