force-app/main/default/objects/Whole_Person_Solution_Mapping__mdt/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DM Solution</fullName>
            </value>
            <value>
                <fullName>CV Solution</fullName>
            </value>
            <value>
                <fullName>DP Solution</fullName>
            </value>
            <value>
                <fullName>CKD Solution</fullName>
            </value>
            <value>
                <fullName>HF Solution</fullName>
            </value>
            <value>
                <fullName>Diabetes Management Plus</fullName>
            </value>
            <value>
                <fullName>Hypertension Management Plus</fullName>
            </value>
            <value>
                <fullName>Prediabetes Management Plus</fullName>
            </value>
            <value>
                <fullName>Diabetes Care Complete</fullName>
            </value>
            <value>
                <fullName>Hypertension Care Complete</fullName>
            </value>
            <value>
                <fullName>Prediabetes Care Complete</fullName>
            </value>
            <value>
                <fullName>Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Hypertension Care</fullName>
            </value>
            <value>
                <fullName>Test Kit Bundle</fullName>
            </value>
            <value>
                <fullName>Advanced Weight Management (Select Populations) with MH</fullName>
            </value>
            <value>
                <fullName>Comprehensive Weight Care (Select Populations) with MH</fullName>
            </value>
            <value>
                <fullName>Advanced Weight Management Plus</fullName>
            </value>
            <value>
                <fullName>Advanced Weight Management</fullName>
            </value>
            <value>
                <fullName>Advanced Weight Management with Prediabetes</fullName>
            </value>
            <value>
                <fullName>Weight Management with MH</fullName>
            </value>          
            <value>
                <fullName>Prediabetes Management with MH</fullName>
            </value>
            <value>
                <fullName>Comprehensive Weight Care Complete</fullName>
            </value>
            <value>
                <fullName>Comprehensive Weight Care with Prediabetes Plus</fullName>
            </value>
            <value>
                <fullName>Comprehensive Weight Care</fullName>
            </value>
            <value>
                <fullName>Diabetes Management with MH</fullName>
            </value>
            <value>
                <fullName>Hypertension Management with MH</fullName>
            </value>
            <value>
                <fullName>Prediabetes Care with MH</fullName>
            </value>
            <value>
                <fullName>Weight Management Care with MH</fullName>
            </value>
            <value>
                <fullName>Hypertension Care with MH</fullName>
            </value>
            <value>
                <fullName>Diabetes Care with MH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>