force-app/main/default/objects/Whole_Person_Solution_Mapping__mdt/listViews/All_Mappings.listView-meta.xml
<ListView>
    <fullName>All_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Solution__c</columns>
    <columns>Program__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Program_Platform_Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mappings</label>
    <language>en_US</language>
</ListView>